styles.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: 'Raleway', sans-serif;
}

html, body {
	width: 100%;
	height: 100%;
}

body {
	font: 13px Helvetica, Arial;
	position: relative;
}

#signInModal {
	position: fixed;
	width: 100%;
	height: 100%;
	text-align: center;
	background-color: #6c6c6c;
	z-index: 20;
}

#nicknameEntryForm {
	display: inline-block;
	text-align: center;
	padding: 40px;
	background-color: #262626;
	margin-top: 100px;
}

.nicknameHeader {
	color: white;
	padding-bottom: 20px;
}

#userNicknameEntry {
	background-color: white;
	color: #4d8bd1;
	border: none;
	text-align: left;
	padding: 10px;
	font-size: 20px;
	outline: none;
}

#messageEntryForm {
	position: fixed;
	bottom: 0;
	width: 100%;
	padding: 0px 10px 10px;
}

#messageEntryForm input {
	border: 1px solid black;
	padding: 10px;
	width: 90%;
	margin-right: .5%;
}

#messageEntryForm button {
	width: 90px;
	background: rgb(15, 195, 255);
	border: none;
	padding: 10px;
	height: 100%;
}

.page {
	width: 100%;
	height: 93%;
	position: relative;
}

.chatContainer {
	position: absolute;
	bottom: 0;
	width: 100%;
	overflow-y: scroll;
	max-height: 100%;
}

#messages li {
	padding: 5px 0px;
}

#messages {
	list-style-type: none;
	margin: 0;
	padding: 30px 30px 10px 30px;
	color: black;
	font-size: 20px;
	display: inline-block;
	width: 100%;
}

.typing {
	display: block;
	padding: 10px 30px;
	font-size: 16px;
	color: #676767;
	min-height: 40px;
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	transition: all 0.5s ease;
}

.typing_hidden {
	opacity: 0;
}

.hidden {
	display: none;
}

